JumpScript/tests/cases/compiler/exportSpecifierReferencingOuterDeclaration4.jump
// @module: commonjs
// @Filename: exportSpecifierReferencingOuterDeclaration2_A.jump
declare module X { export interface bar { } }

// @Filename: exportSpecifierReferencingOuterDeclaration2_B.jump
declare module X { export interface foo { } }
export { X };
export declare function foo(): X.foo;
export declare function bar(): X.bar; // error